# rt-mbms-mw-android

./: .gitattributes  .gitignore  .gitmodules  ATTRIBUTION_NOTICE  CONTRIBUTION_NOTICE.md  README.md  build.gradle  gradle.properties  keystore.jks  settings.gradle
.github/workflows/: build-gradle.yml  unit-test-gradle.yml
app/: .gitignore  build.gradle
app/3gpp-api-specs-merged/: TS26512_M5.json
app/3gpp-api-specs-used/: TS26512_M5_ConsumptionReporting.yaml  TS26512_M5_ServiceAccessInformation.yaml
app/src/androidTest/java/com/bitstem/ossmw/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bootstrap.multipart  bootstrap.multipart.debug  bootstrap.multipart.hls
app/src/main/cpp/: CMakeLists.txt  CacheItems.h  CacheManagement.cpp  CacheManagement.h  ContentStream.cpp  ContentStream.h  HlsMediaPlaylist.cpp  HlsMediaPlaylist.h  Middleware.cpp  Middleware.h  RestHandler.cpp  RestHandler.h  Service.cpp  Service.h  ServiceAnnouncement.cpp  ServiceAnnouncement.h  android-jni-bindings.cpp
app/src/main/cpp/lib/tinyxml2/: tinyxml2.cpp  tinyxml2.h
app/src/main/cpp/libflute/: File.cpp  FileDeliveryTable.cpp  Receiver.cpp  Receiver.h
app/src/main/cpp/seamless/: CdnClient.cpp  CdnClient.h  SeamlessContentStream.cpp  SeamlessContentStream.h  Segment.cpp  Segment.h
app/src/main/java/com/fivegmag/ossmw/: Actions.kt  CppOssNoticesActivity.kt  LicenseActivity.kt  MainActivity.kt  MwService.kt  NakolosMwService.kt  SettingsActivity.kt
app/src/main/java/com/nakolos/ossmw/: Actions.kt  CppOssNoticesActivity.kt  LicenseActivity.kt  MainActivity.kt  NakolosMwService.kt  SettingsActivity.kt
app/src/main/res/layout/: activity_cpp_oss_notices.xml  activity_license.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/bitstem/ossmw/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
